# CSU44052-Project

./: CMakeLists.txt  README.md
final_project/: depth.frag  depth.vert  final_project.cpp  robot.frag  robot.vert  scene.frag  scene.vert
final_project/model/: Robot_dog.gltf
